FIX: prevents textarea to overflow modal on mobile

--- a/assets/stylesheets/common/chat-channel-info.scss
+++ b/assets/stylesheets/common/chat-channel-info.scss
@@ -112,7 +112,6 @@ input.channel-members-view__search-input {
 .chat-channel-edit-title-modal__title-input {
   display: flex;
   margin: 0;
-  min-width: 400px;
 }
 
 .chat-channel-edit-title-modal__description {
@@ -125,7 +124,6 @@ input.channel-members-view__search-input {
 .chat-channel-edit-description-modal__description-input {
   display: flex;
   margin: 0;
-  min-width: 400px;
   min-height: 200px;
 }
 
